[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameCompleteDialog.gd" type="Script" id=1]
[ext_resource path="res://User Interface/Menus/Icons/slider-grabber.png" type="Texture" id=2]
[ext_resource path="res://User Interface/Styles/MainTheme.tres" type="Theme" id=3]

[node name="CenterContainer" type="CenterContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
margin_right = 650.0
margin_bottom = 300.0
rect_min_size = Vector2( 650, 300 )
theme = ExtResource( 3 )
window_title = "Well Done!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -48.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AcceptDialog/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 624.0
margin_bottom = 234.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="AcceptDialog/MarginContainer/VBoxContainer"]
margin_right = 614.0
margin_bottom = 26.0
text = "You completed the level in 5 minutes and 7 seconds!"
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 614.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="AcceptDialog/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 614.0
margin_bottom = 124.0
columns = 3

[node name="Attempts" type="Label" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_right = 291.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Attempts:"
align = 1
autowrap = true

[node name="AttemptsVal" type="Label" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 295.0
margin_right = 586.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "52"
align = 1
autowrap = true

[node name="AttemptsNewRecord" type="TextureRect" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 590.0
margin_right = 614.0
margin_bottom = 26.0
texture = ExtResource( 2 )

[node name="Matches" type="Label" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 30.0
margin_right = 291.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Matches:"
align = 1
autowrap = true

[node name="MatchesVal" type="Label" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 295.0
margin_top = 30.0
margin_right = 586.0
margin_bottom = 56.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "24"
align = 1
autowrap = true

[node name="AttemptsNewRecord2" type="TextureRect" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 590.0
margin_top = 30.0
margin_right = 614.0
margin_bottom = 56.0
texture = ExtResource( 2 )

[node name="APM" type="Label" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_top = 60.0
margin_right = 291.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Attempts per match:"
align = 1
autowrap = true

[node name="APMVal" type="Label" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 295.0
margin_top = 60.0
margin_right = 586.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "2.17"
align = 1
valign = 2
autowrap = true

[node name="AttemptsNewRecord3" type="TextureRect" parent="AcceptDialog/MarginContainer/VBoxContainer/GridContainer"]
margin_left = 590.0
margin_top = 60.0
margin_right = 614.0
margin_bottom = 86.0
texture = ExtResource( 2 )
